<resources>
    <string name="app_name">小食代</string>
    <string name="toast_login_thread">该功能正在开发中，敬请期待...</string>
    <string name="toast_login_phone_no_length">请输入11位有效的手机号码...</string>
    <string name="toast_login_pass_no_length">请输入6-12位字母，数字组成的密码...</string>
    <string name="toast_login_code_no_length">请输入6位手机验证码...</string>
    <string name="toast_login_code_error">验证码验证失败...</string>
    <string name="tv_register_agree">我同意“用户注册协议”</string>
    <string name="tools_text">滴滴司机，如果你上下班稳定，而且有车的话，可以去考虑，首先车不能是费油的那种，对道路比较熟悉，自己也有服务意识才可以，服务分的高低决定你接单量和收入。下载一个滴滴司机客户端申请一下就可以了。车辆6年以内的新车，价格在10万左右，根据每个城市的标准可能有所变化。</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_action">确定</string>
    <string name="ed_hint_phone">请输入账号</string>
    <string name="tv_login_phone_text">+86</string>
    <string name="ed_hint_passWord">请输入密码</string>
    <string name="tv_login_passWord_text">密码</string>
    <string name="tv_forget">忘记密码</string>
    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_other_login_text">使用第三方平台快速登录</string>
    <string name="alert_have_no_function">抱歉，该功能正在开发中</string>
    <string name="alert_enter_phone">请输入有效的11位手机号码</string>
    <string name="alert_enter_passWord">请输入6-12由数字和字母组成的密码</string>
    <string name="alert_login_success">登录成功</string>
    <string name="alert_login_failed">用户或密码错误，请重试</string>
    <string name="tv_getCode">获取验证码</string>
    <string name="ed_hint_code">请输入验证码</string>
    <string name="tv_login_code_text">验证码</string>
    <string name="alert_enter_code">请输入6位有效验证码</string>
    <string name="tv_register_toast">注册即代表同意《用户注册协议》</string>
    <string name="alert_register_success">注册成功</string>
    <string name="alert_register_failed">注册失败</string>
    <string name="tv_introduce">介绍</string>
    <string name="alert_enter_comments">请输入评论</string>
    <string name="dialog_cancel_collect">是否取消收藏？</string>
    <string name="dialog_collect">是否收藏该条菜谱?</string>
    <string name="alert_cancel_success">取消收藏成功</string>
    <string name="alert_collect_success">收藏成功</string>
    <string name="tv_collect">我的收藏</string>
    <string name="tv_steps">步骤</string>
    <string name="error_tips">糟糕！加载失败了ヽ(≧Д≦)ノ\n 偷偷告诉你一些可能的原因：\n1.惨不忍睹的网络环境\n 2.服务器君的不定期抽风\n 3.小食代现在心情不好拒绝服务喔~\n4.点击进行重试</string>
    <string name="tv_comments">评论</string>
</resources>
