<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".ui.RegisterActivity">

    <include
        android:id="@+id/layout"
        layout="@layout/layout_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_17"
        android:text="@string/tv_register"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/sp_23"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout" />


    <EditText
        android:id="@+id/et_phone"
        style="@style/LoginEditStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_42"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_24"
        android:hint="@string/ed_hint_phone"
        android:inputType="phone"
        android:paddingLeft="@dimen/dp_68"
        android:maxLength="11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/tv_login_phone_text"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@id/et_phone"
        app:layout_constraintLeft_toLeftOf="@id/et_phone"
        app:layout_constraintTop_toTopOf="@id/et_phone" />


    <TextView
        android:id="@+id/tv_code"
        style="@style/LoginCodeUnselectedStyle"
        android:layout_width="@dimen/dp_101"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintRight_toRightOf="@id/et_phone"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        android:text="@string/tv_getCode" />

    <EditText
        android:id="@+id/et_code"
        style="@style/LoginEditStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxLength="6"
        android:layout_marginRight="@dimen/dp_10"
        android:hint="@string/ed_hint_code"
        android:paddingLeft="@dimen/dp_68"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/tv_code"
        app:layout_constraintLeft_toLeftOf="@id/et_phone"
        app:layout_constraintRight_toLeftOf="@id/tv_code"
        app:layout_constraintTop_toTopOf="@id/tv_code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/tv_login_code_text"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@id/et_code"
        app:layout_constraintLeft_toLeftOf="@id/et_code"
        app:layout_constraintTop_toTopOf="@id/et_code" />


    <EditText
        android:id="@+id/et_passWord"
        style="@style/LoginEditStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/ed_hint_passWord"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_68"
        android:maxLength="12"
        app:layout_constraintLeft_toLeftOf="@id/et_phone"
        app:layout_constraintRight_toRightOf="@id/et_phone"
        app:layout_constraintTop_toBottomOf="@id/tv_code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/tv_login_passWord_text"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@id/et_passWord"
        app:layout_constraintLeft_toLeftOf="@id/et_passWord"
        app:layout_constraintTop_toTopOf="@id/et_passWord" />


    <TextView
        android:id="@+id/tv_action"
        style="@style/MainButtonUnselectedStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_29"
        android:text="@string/tv_action"
        app:layout_constraintLeft_toLeftOf="@id/et_phone"
        app:layout_constraintRight_toRightOf="@id/et_phone"
        app:layout_constraintTop_toBottomOf="@id/et_passWord" />


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_24"
        android:textSize="@dimen/sp_13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_action"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_toast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_30"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/tv_register_toast"
        android:textSize="@dimen/sp_11"
        android:textColor="@color/toast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>