<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_283"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_dialog_bg">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="@dimen/dp_283"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start|center_vertical"
        android:lineSpacingExtra="@dimen/dp_6"
        android:maxLines="2"
        android:padding="@dimen/dp_26"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="@color/editBg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />


    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_34"
        android:layout_marginLeft="@dimen/dp_22"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_19"
        android:background="@drawable/shape_dialog_cancel"
        android:gravity="center"
        android:text="@string/tv_cancel"
        android:textColor="@color/textUnSelected"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dialog_action"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <TextView
        android:id="@+id/dialog_action"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_34"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_22"
        android:layout_marginBottom="@dimen/dp_19"
        android:background="@drawable/shape_dialog_action"
        android:gravity="center"
        android:text="@string/tv_action"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dialog_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />


</androidx.constraintlayout.widget.ConstraintLayout>